--- a/assets/config.yml
+++ b/assets/config.yml
@@ -2,7 +2,7 @@
 # Homepage configuration
 # See https://fontawesome.com/icons for icons options
 
-title: "Cude Web Services"
+title: "Martins Web Services"
 subtitle: "Dashboard"
 #logo: "logo.png"
 # icon: "fas fa-skull-crossbones" # Optional icon
