--- a/assets/config.yml
+++ b/assets/config.yml
@@ -76,11 +76,15 @@ services:
         tag: "app"
         url: "https://192.168.2.2:9000"
         target: "_blank" # optional html a tag target attribute
-      - name: "Daffy - iLO"
-        logo: "assets/tools/sample.png"
-        subtitle: "Lights Out Monitoring"
+      - name: "Git HowTo"
+        logo: "assets/data/icons/git.png"
+        subtitle: "Documentation Git"
         tag: "app"
-        url: "https://10.10.0.102/"
+        url: "https://www.atlassian.com/git/tutorials/syncing/git-pull"
+      - name : "Homer HowTo"
+        logo: "assets/data/icons/homer.png"
+        tag: "app"
+        url: "https://github.com/bastienwirtz/homer/blob/main/docs"
       - name: "Scrutiny"
         logo: "assets/tools/sample.png"
         subtitle: "SMART data at a glance"
