--- a/assets/config.yml
+++ b/assets/config.yml
@@ -107,22 +107,22 @@ services:
         url: "http://192.168.2.2:8581/"
         target: "_blank" # optional html a tag target attribute
       - name: "Wireguard"
-        logo: "assets/data/icon/wireguard.png"
+        logo: "assets/data/icons/wireguard.png"
         subtitle: "My VPN Service"
         tag: "app"
         url: "http://192.168.2.2:51821/"
       - name: "Motioneye"
-        logo: "assets/data/icon/motion.png"
+        logo: "assets/data/icons/motion.png"
         subtitle: "Camera Projekt"
         tag: "app"
         url: "http://192.168.2.2:8765/"
       - name: "Homer"
-        logo: "assets/data/icon/homer.png"
+        logo: "assets/data/icons/homer.png"
         subtitle: "This page"
         tag: "app"
         url: "http://192.168.2.2:8902/"
       - name: "Mosquitto"
-        logo: "assets/data/icon/mosquitto.png"
+        logo: "assets/data/icons/mosquitto.png"
         subtitle: "MQTT"
         tag: "app"
         #url: "http://192.168.2.2:8902/"       
