--- a/assets/config.yml
+++ b/assets/config.yml
@@ -9,7 +9,20 @@ subtitle: "Dashboard"
 
 header: true
 footer: true 
-columns: "4"
+columns: "3"
+
+connectivityCheck: true # whether you want to display a message when the apps are not accessible anymore (VPN disconnected for example).
+                        # You should set it to true when using an authentication proxy, it also reloads the page when a redirection is detected when checking connectivity.
+
+# Optional: Proxy / hosting option
+proxy:
+  useCredentials: false # send cookies & authorization headers when fetching service specific data. Set to `true` if you use an authentication proxy. Can be overrided on service level. 
+
+# Set the default layout and color scheme
+defaults:
+  layout: columns # Either 'columns', or 'list'
+  colorTheme: auto # One of 'auto', 'light', or 'dark'
+
 
 # Optional theme customization
 theme: default
@@ -40,12 +53,32 @@ colors:
     link-hover: "#ffdd57"
 
 # Optional message
+#message:
+#  url: https://b4bz.io
+#  style: "is-dark" # See https://bulma.io/documentation/components/message/#colors for styling options.
+#  title: "Demo !"
+#  icon: "fa fa-grin"
+#  content: "This is a dummy homepage demo. <br /> Find more information on <a href='https://github.com/bastienwirtz/homer'>github.com/bastienwirtz/homer</a>"
+
+# Optional message
 message:
-  url: https://b4bz.io
-  style: "is-dark" # See https://bulma.io/documentation/components/message/#colors for styling options.
-  title: "Demo !"
-  icon: "fa fa-grin"
-  content: "This is a dummy homepage demo. <br /> Find more information on <a href='https://github.com/bastienwirtz/homer'>github.com/bastienwirtz/homer</a>"
+  # url: "https://<my-api-endpoint>" # Can fetch information from an endpoint to override value below.
+  # mapping: # allows to map fields from the remote format to the one expected by Homer
+  #   title: 'id' # use value from field 'id' as title
+  #   content: 'value' # value from field 'value' as content
+  # refreshInterval: 10000 # Optional: time interval to refresh message
+  #
+  # Real example using chucknorris.io for showing Chuck Norris facts as messages:
+   url: https://api.chucknorris.io/jokes/random
+   mapping:
+     title: 'id'
+     content: 'value'
+   refreshInterval: 10000
+  style: "is-warning"
+  title: "Optional message!"
+  icon: "fa fa-exclamation-triangle"
+  content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+
 
 # Optional navbar
 # links: [] # Allows for navbar (dark mode, layout, and search) without any links
