--- a/assets/config.yml
+++ b/assets/config.yml
@@ -69,15 +69,15 @@ message:
   # refreshInterval: 10000 # Optional: time interval to refresh message
   #
   # Real example using chucknorris.io for showing Chuck Norris facts as messages:
-   url: https://api.chucknorris.io/jokes/random
-   mapping:
-     title: 'id'
-     content: 'value'
-   refreshInterval: 10000
-  style: "is-warning"
-  title: "Optional message!"
-  icon: "fa fa-exclamation-triangle"
-  content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+  url: https://api.chucknorris.io/jokes/random
+  mapping:
+    title: 'id'
+    content: 'value'
+  refreshInterval: 10000
+  #style: "is-warning"
+  #title: "Optional message!"
+  #icon: "fa fa-exclamation-triangle"
+  #content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 
 
 # Optional navbar
