--- a/assets/config.yml
+++ b/assets/config.yml
@@ -179,11 +179,11 @@ services:
 #        subtitle: "SMART Info at a Glance"
 #        tag: "app"
 #        url: "10.10.2.101:8080/web/dashboard"
-#      - name: "Portainer - svr-plex-01"
-#        logo: "assets/tools/sample.png"
-#        subtitle: "Portainer instance residing on svr-plex-01"
-#        tag: "app"
-#        url: "http://10.10.2.101:9000/#!/home"
+      - name: "SabNZBD"
+        logo: "assets/data/icons/sabnzbd.png"
+        subtitle: "SABNbzd NZBD downloader"
+        tag: "app"
+        url: "http://192.168.2.10:8081/sabnzbd/"
   - name: "Management"
     icon: "fas fa-cloud"
     items:
