--- a/assets/config.yml
+++ b/assets/config.yml
@@ -194,17 +194,17 @@ services:
         url: "https://192.168.2.20/login?redirect=%2F"
         target: "_blank" # optional html a tag target attribute
       - name: "UptimeRobot"
-        logo: "assets/tools/sample.png"
+        logo: "assets/data/icons/uptimerobot2.png"
         subtitle: "Monitor Service Uptime"
         tag: "app"
-        url: "https://stats.uptimerobot.com/onVGVcXOB6"
-      - name: "Cloudflare"
-        logo: "assets/tools/sample.png"
-        subtitle: "DNS and WAF"
-        tag: "app"
-        url: "https://dash.cloudflare.com/login"
-      - name: "Portainer - svr-docker-01"
-        logo: "assets/tools/sample.png"
-        subtitle: "Portainer instance residing on svr-docker-01"
-        tag: "app"
-        url: "http://10.10.80.192:9000/#!/home"
+        url: "https://stats.uptimerobot.com/Hlq1oadhRW"
+#      - name: "Cloudflare"
+#        logo: "assets/tools/sample.png"
+#        subtitle: "DNS and WAF"
+#        tag: "app"
+#        url: "https://dash.cloudflare.com/login"
+#      - name: "Portainer - svr-docker-01"
+#        logo: "assets/tools/sample.png"
+#        subtitle: "Portainer instance residing on svr-docker-01"
+#        tag: "app"
+#        url: "http://10.10.80.192:9000/#!/home"
