--- a/assets/config.yml
+++ b/assets/config.yml
@@ -119,11 +119,11 @@ services:
         logo: "assets/data/icons/homer.png"
         tag: "app"
         url: "https://github.com/bastienwirtz/homer/blob/main/docs"
-      - name: "Scrutiny"
+      - name: "Font-Awesome"
         logo: "assets/tools/sample.png"
-        subtitle: "SMART data at a glance"
+        #subtitle: "SMART data at a glance"
         tag: "app"
-        url: "https://10.10.0.102/"
+        url: "https://fontawesome.com/v5/icons/cloud?f=classic&s=solid"
   - name: "My Containers"
     icon: "fas fa-wallet"
     items:
