--- a/assets/config.yml
+++ b/assets/config.yml
@@ -4,7 +4,7 @@
 
 title: "TTCM Web Services"
 subtitle: "Dashboard"
-logo: "logo.png"
+#logo: "logo.png"
 icon: "fas fa-skull-crossbones" # Optional icon
 
 header: true
