--- a/assets/config.yml
+++ b/assets/config.yml
@@ -69,11 +69,11 @@ message:
   # refreshInterval: 10000 # Optional: time interval to refresh message
   #
   # Real example using chucknorris.io for showing Chuck Norris facts as messages:
-  url: https://api.chucknorris.io/jokes/random
-  mapping:
-    title: 'id'
-    content: 'value'
-  refreshInterval: 10000
+  #url: https://api.chucknorris.io/jokes/random
+  #mapping:
+  #  title: 'id'
+  #  content: 'value'
+  #refreshInterval: 10000
   #style: "is-warning"
   #title: "Optional message!"
   #icon: "fa fa-exclamation-triangle"
