--- a/assets/config.yml
+++ b/assets/config.yml
@@ -141,12 +141,12 @@ services:
         type: "PiHole"
         tag: "PiHole"
       - name: "Vaultwarden"
-        logo: "assets/data/icons/vaultwarden.jpg"
+        logo: "assets/data/icons/vaultwarden.png"
         subtitle: "Personal password manager "
         tag: "app"
         url: "https://vw.ttcm.duckdns.org/"
         target: "_blank" # optional html a tag target attribute
-      - name: "Vaultwarden"
+      - name: "Homebridge"
         logo: "assets/data/icons/homebridge.jpg"
         subtitle: "Homebridge allows you to integrate with smart home devices that do not natively support HomeKit. "
         tag: "app"
