--- a/assets/config.yml
+++ b/assets/config.yml
@@ -206,7 +206,7 @@ services:
         url: "https://sab.ttcm.duckdns.org/sabnzbd/"
         target: "_blank" # optional html a tag target attribute
   - name: "Management"
-    icon: "fas fa-cloud"
+    icon: "fas fa-user"
     items:
       - name: "Unifi"
         logo: "assets/data/icons/unifi2.png"
@@ -242,3 +242,30 @@ services:
 #        subtitle: "Portainer instance residing on svr-docker-01"
 #        tag: "app"
 #        url: "http://10.10.80.192:9000/#!/home"
+  - name: "Heimnetz"
+    icon: "fas fahouse"
+    items:
+      - name: "Gira TKS Türsystem"
+        logo: "assets/data/icons/GiraTKSTuersystem-300x192.png"
+        subtitle: "gira"
+        tag: "app"
+        url: "http://192.168.2.222:8080/"
+        target: "_blank" # optional html a tag target attribute
+      - name: "Fritz!Box"
+        logo: "assets/data/icons/fritz.png"
+        subtitle: "My Fritz!Box"
+        tag: "app"
+        url: "https://fritz.ttcm.duckdns.org"
+        target: "_blank" # optional html a tag target attribute
+      - name: "1home"
+        logo: "assets/data/icons/1home-dark-logo.png"
+        subtitle: "1home - Alexa"
+        tag: "app"
+        url: "https://my.1home.io"
+        target: "_blank" # optional html a tag target attribute
+      - name: "UptimeRobot"
+        logo: "assets/data/icons/uptimerobot2.png"
+        subtitle: "Monitor Service Uptime"
+        tag: "app"
+        url: "https://stats.uptimerobot.com/Hlq1oadhRW"
+        target: "_blank" # optional html a tag target attribute
