--- a/assets/config.yml
+++ b/assets/config.yml
@@ -243,7 +243,7 @@ services:
 #        tag: "app"
 #        url: "http://10.10.80.192:9000/#!/home"
   - name: "Heimnetz"
-    icon: "fas fahouse"
+    icon: "fas fa-house"
     items:
       - name: "Gira TKS Türsystem"
         logo: "assets/data/icons/GiraTKSTuersystem-300x192.png"
