--- a/assets/config.yml
+++ b/assets/config.yml
@@ -245,27 +245,39 @@ services:
   - name: "Heimnetz"
     icon: "fas fa-house"
     items:
+      - name: "Unii-Manage"
+        logo: "assets/data/icons/UniFi_Manage_192.1682.20_ubnt-300x178.png"
+        subtitle: "gira"
+        tag: "app"
+        url: "http://192.168.2.20/"
+        target: "_blank" # optional html a tag target attribute
       - name: "Gira TKS Türsystem"
         logo: "assets/data/icons/GiraTKSTuersystem-300x192.png"
         subtitle: "gira"
         tag: "app"
         url: "http://192.168.2.222:8080/"
         target: "_blank" # optional html a tag target attribute
-      - name: "Fritz!Box"
-        logo: "assets/data/icons/fritz.png"
-        subtitle: "My Fritz!Box"
+      - name: "Heizung"
+        logo: "assets/data/icons/Heizung_192.168.2.30_1..6-300x197.png"
+        subtitle: ""
         tag: "app"
-        url: "https://fritz.ttcm.duckdns.org"
+        url: "http://192.168.2.30/"
         target: "_blank" # optional html a tag target attribute
-      - name: "1home"
-        logo: "assets/data/icons/1home-dark-logo.png"
-        subtitle: "1home - Alexa"
+      - name: "NextServer"
+        logo: "assets/data/icons/NextServer_192.168.2.210-xweb-300x151.png"
+        subtitle: "KNX"
         tag: "app"
-        url: "https://my.1home.io"
+        url: "http://192.168.2.210/xweb"
         target: "_blank" # optional html a tag target attribute
-      - name: "UptimeRobot"
-        logo: "assets/data/icons/uptimerobot2.png"
-        subtitle: "Monitor Service Uptime"
+      - name: "Zyxel-GS1920-24HP"
+        logo: "assets/data/icons/Zyxel_switch_192.168.2.8-300x151.png"
+        subtitle: "Switch(PoE)"
         tag: "app"
-        url: "https://stats.uptimerobot.com/Hlq1oadhRW"
+        url: "http://192.168.2.8/"
+        target: "_blank" # optional html a tag target attribute
+      - name: "Zyxel-GS1920-24"
+        logo: "assets/data/icons/Zyxel_switch_192.168.2.8-300x151.png"
+        subtitle: "Switch(non PoE)"
+        tag: "app"
+        url: "http://192.168.2.9/"
         target: "_blank" # optional html a tag target attribute
