--- a/assets/config.yml
+++ b/assets/config.yml
@@ -8,7 +8,7 @@ subtitle: "Dashboard"
 icon: "fas fa-skull-crossbones" # Optional icon
 
 header: true
-footer: true 
+footer: false
 columns: "3"
 
 connectivityCheck: true # whether you want to display a message when the apps are not accessible anymore (VPN disconnected for example).
@@ -92,9 +92,9 @@ links:
     url: "https://www.wikipedia.org/"
   # this will link to a second homer page that will load config from additionnal-page.yml and keep default config values as in config.yml file
   # see url field and assets/additionnal-page.yml.dist used in this example:
-  - name: "Blog"
+  - name: "KNX-SuperSed"
     icon: "fas fa-file-alt"
-    url: "https://tcude.net" 
+    url: "https://knx.supersed.de" 
 
 # Services
 # First level array represent a group.
